--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,56 +1,63 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent">
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
 
     <RelativeLayout
-        android:id="@+id/status_container"
-        android:layout_width="match_parent"
-        android:layout_height="48dp"
-        android:orientation="horizontal">
-
-        <TextView
-            android:id="@+id/score_card_label"
+            android:id="@+id/status_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:layout_centerInParent="true"
-            android:layout_marginLeft="8dp"
-            android:layout_marginRight="8dp"
-            android:layout_toLeftOf="@+id/game_over_status"
-            android:gravity="center"
-            android:text="TextView"
-            android:textSize="16sp" />
+            android:layout_height="48dp"
+            android:orientation="horizontal">
 
         <TextView
-            android:id="@+id/game_over_status"
-            android:layout_width="wrap_content"
-            android:layout_height="match_parent"
-            android:layout_alignParentRight="true"
-            android:layout_marginRight="8dp"
-            android:gravity="center"
-            android:text="On" />
+                android:id="@+id/score_card_label"
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:layout_centerInParent="true"
+                android:layout_marginLeft="8dp"
+                android:layout_marginRight="8dp"
+                android:layout_toLeftOf="@+id/game_over_status"
+                android:gravity="center"
+                android:text="0/0"
+                android:textSize="16sp"/>
+
+        <TextView
+                android:id="@+id/game_over_status"
+                android:layout_width="wrap_content"
+                android:layout_height="match_parent"
+                android:layout_alignParentRight="true"
+                android:layout_marginRight="8dp"
+                android:gravity="center"
+                android:text="@string/game_on"/>
     </RelativeLayout>
 
     <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:layout_below="@+id/status_container"
-        android:baselineAligned="false"
-        android:orientation="horizontal">
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_below="@+id/status_container"
+            android:baselineAligned="false"
+            android:orientation="horizontal">
 
         <FrameLayout
-            android:id="@+id/list_container"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="0.5">
+                android:id="@+id/list_container"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="0.5">
 
         </FrameLayout>
 
+        <!--<fragment-->
+                <!--android:id="@+id/word_list_fragment"-->
+                <!--android:name="com.fallingwords.WordListFragment"-->
+                <!--android:layout_width="0dp"-->
+                <!--android:layout_height="match_parent"-->
+                <!--android:layout_weight="0.5"/>-->
+
         <fragment
-            android:id="@+id/description_fragment"
-            android:name="com.fallingwords.DescriptionFragment"
-            android:layout_width="0dp"
-            android:layout_height="match_parent"
-            android:layout_weight="2.5" />
+                android:id="@+id/description_fragment"
+                android:name="com.fallingwords.DescriptionFragment"
+                android:layout_width="0dp"
+                android:layout_height="match_parent"
+                android:layout_weight="2.5"/>
     </LinearLayout>
 </RelativeLayout>
