--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,6 +11,8 @@
     <color name="word_item_icon_wrong">#ff0000</color>
 
 
+    <color name="title_color">#de07434d</color>
+
     <color name="white">#fafafa</color>
     <color name="white_pressed">#f1f1f1</color>
     <color name="half_black">#808080</color>
