--- a/app/src/main/res/layout/fragment_description.xml
+++ b/app/src/main/res/layout/fragment_description.xml
@@ -18,7 +18,8 @@
                 android:layout_height="wrap_content"
                 android:text="@string/game_description"
                 android:textColor="@android:color/black"
-                android:layout_centerInParent="true"/>
+                android:layout_centerInParent="true" android:textStyle="bold" android:gravity="center"
+                android:layout_marginLeft="@dimen/padding_normal" android:layout_marginRight="@dimen/padding_normal"/>
 
         <Button
                 android:id="@+id/button_start"
@@ -108,6 +109,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Spanish translated word!"
+                android:gravity="center"
                 android:textColor="@android:color/black"/>
 
         <TextView
@@ -115,6 +117,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Spanish translated word!"
+                android:gravity="center"
                 android:textColor="@android:color/black"/>
 
         <TextView
@@ -122,6 +125,9 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Spanish translated word!"
+                android:layout_marginLeft="@dimen/spacing_normal"
+                android:layout_marginRight="@dimen/spacing_normal"
+                android:gravity="center"
                 android:textColor="@android:color/black"/>
 
         <TextView
@@ -129,6 +135,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Spanish translated word!"
+                android:gravity="center"
                 android:textColor="@android:color/black"/>
 
     </LinearLayout>
